# deu-ruim

./: LICENSE  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yaml  feature_request.yml  privileged.yml
changelog.d/: +1835b9e8.added.md  +3702c560.changed.md  +540aad0f.added.md  +7efbcd45.added.md  +cb8a4af1.added.md  +e8f16ac5.added.md  9.added.md
deu_ruim/: cli.py  utils.py
deu_ruim/llm/: agents.py  deps.py  schemas.py
tests/: test_agents.py  test_utils.py
